<resources>
    <string name="app_name">MPL</string>
    <string name="uploadimg">上传图片</string>
    <string name="export">导出标签</string>
    <string name="users">查看用户</string>
    <string name="admin">管理员</string>
    <string name="selectIMG">选择图片</string>
    <string name="addAdmin">添加管理员</string>
    <string name="refresh">刷新</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="uploadcount">一次选择的图片数量</string>
    <string name="uid">UID:</string>
    <string name="username">用户名:</string>
    <string name="phone">手机号:</string>
    <string name="email">邮箱:</string>
    <string name="password">密码:</string>
    <string name="hobbies">爱好:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="changePassword">管理员修改用户密码</string>
    <string name="adminInfo">个人信息</string>
    <string name="editUsername">编辑用户名</string>
    <string name="Yes">确定</string>
    <string name="No">取消</string>
    <string name="editPssword">修改密码</string>
    <string name="oldPassword">输入原密码</string>
    <string name="newPassword">输入新密码</string>
    <string name="modifyNewPassword">确认新密码</string>
    <string name="loginTitle">图片管理</string>
    <string name="inputUserName">请输入用户名</string>
    <string name="inputPassword">请输入密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="rememberPwn">记住密码</string>
    <string name="login">登录</string>
    <string name="aid">用户ID</string>
    <string name="pw">密码</string>
    <string name="UN">用户名</string>
    <string name="modifyPassword">确认密码</string>
    <string name="root">根用户</string>
    <string name="picName">图片名</string>
    <string name="finishedTime">结束时间</string>
</resources>
