<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_login"
    tools:context="valderfields.rjb_admin.view.LoginActivity">

    <!--登录-->
    <LinearLayout
        android:id="@+id/user_login"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <!--标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:text="@string/loginTitle"/>

        </LinearLayout>

        <!--用户名-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:inputType="text"
                android:hint="@string/inputUserName"/>

        </android.support.design.widget.TextInputLayout>
        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/inputPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/dl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:background="@drawable/login_button_style"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
