<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="valderfields.rjb_admin.view.AdminActivity"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUsernameArea"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="10dp">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/darker_gray"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addAdmin"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/darker_gray"
                    android:layout_gravity="center" />

            </LinearLayout>

            <EditText
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:hint="@string/UN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:id="@+id/username" />

            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:hint="@string/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:id="@+id/pwd" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/editUsernameArea">

            <TextView
                android:id="@+id/editPassword_yes"
                android:padding="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:gravity="center"
                android:background="@drawable/bg_dialog_yes"
                android:text="@string/Yes"/>


            <TextView
                android:id="@+id/editPassword_no"
                android:padding="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:gravity="center"
                android:background="@drawable/bg_dialog_no"
                android:text="@string/No"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
